--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <main>
             <div class="to-do-list">
                 <ul v-if="todos.length > 0">
-                    <li :class="todos.ceck == true ? 'cecked' : '' "  v-for="(todo, index) in todos" :key="index">{{todo.todo}} <i class="fas fa-check" @click="ceckTodo(index)"></i> <i class="fas fa-times" @click="removeTodo(index)"></i></li>
+                    <li v-for="(todo, index) in todos" :class="todo.ceck ? 'cecked' : '' "   :key="index">{{todo.todo}} <i class="fas fa-check" @click="ceckTodo(index)"></i> <i class="fas fa-times" @click="removeTodo(index)"></i></li>
                 </ul>
                 <h2 v-else >Non ci sono todo da todo</h2>
             </div>
