--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
         <main>
             <div class="to-do-list">
                 <ul v-if="todos.length > 0">
-                    <li v-for="(todo, index) in todos" :class="todo.ceck ? 'cecked' : '' "   :key="index">{{todo.todo}} <i class="fas fa-check" @click="ceckTodo(index)"></i> <i class="fas fa-times" @click="removeTodo(index)"></i></li>
+                    <li v-for="(todo, index) in todos" :class="todo.ceck ? 'cecked' : '' "   :key="index">
+                        <span v-if="todos[index].modifyTodo == true">
+                            <input type="text" v-model="todo.todo"> 
+                        </span>
+                        <span v-else>
+                            {{todo.todo}}
+                        </span> 
+                        <span> 
+                            <button @click="modifytext(index)" >Modifica</button>
+                            <i class="fas fa-check" @click="ceckTodo(index)"></i> 
+                            <i class="fas fa-times" @click="removeTodo(index)"></i>
+                        </span>
+                    </li>
                 </ul>
                 <h2 v-else >Non ci sono todo da todo</h2>
             </div>
